--- a/spring-pet-core-service-production.yml
+++ b/spring-pet-core-service-production.yml
@@ -4,6 +4,9 @@ eureka:
       defaultZone: http://localhost:8761/eureka/
   instance:
     preferIpAddress: true
-    
+
+
+timezone: EST
+
 region:
   state: NJ
